# MoodleMCP

./: .env.example  .gitignore  CLAUDE.md  Claude_Code_Setup_Guide.md  Gemini_CLI_Setup_Guide.html  Gemini_CLI_Setup_Guide.md  Mac_Cheat_Sheet.md  Moodle_MCP_Download_Guide.html  Moodle_MCP_User_Guide.html  README.md  TASKS.md  Windows_Cheat_Sheet.md  claude_config_example.json  pyproject.toml
docs/: AVAILABLE_FUNCTIONS.md  DEV_PROD_ENVIRONMENT_SETUP.md  DUAL_INSTANCE_SETUP.md  GROUPS_TOOLS.md  IMPROVEMENTS.md  MOODLE_WEB_SERVICES_AUDIT.md  PRODUCTION_SAFETY_ANALYSIS.md  TOOL_PARAMETERS.md  WEB_SERVICE_CONFIGURATION.md  WRITE_OPERATIONS_SAFETY.md  WRITE_SAFETY_SUMMARY.md
docs/archive/: COMPLETE_DESCRIPTION_UPDATES.md  CONVERSATION_SUMMARY.md  ENROLLED_USERS_GROUP_ENHANCEMENT.md  GROUPS_IMPLEMENTATION_SUMMARY.md  PAGINATION_FINDINGS.md  REFACTORING_SUMMARY.md  TOOLS_NEED_DESCRIPTION_UPDATES.md
examples/: README.md  explore_question_bank.py  list_question_functions.py  lookup_user_courses.py
scripts/: check_api_docs.py  run_all_tests.py  test_all_tools.py  test_comprehensive.py  test_pagination_support.py  test_read_only_tools.py  test_server.sh  verify_web_service.py
src/moodle_mcp/: main.py  server.py
src/moodle_mcp/core/: client.py  config.py  exceptions.py
src/moodle_mcp/models/: base.py  courses.py  users.py
src/moodle_mcp/tools/: assignments.py  badges.py  calendar.py  completion.py  quiz.py  (+8 more)
tests/: conftest.py  test_dynamic_discovery.py  test_helpers.py  test_real_api.py  test_tools_comprehensive.py  test_tools_integration.py  test_user_course_lookup.py
(+4 files in other folders)
